<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/item_radius"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/options"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/add_dialog_btnAsync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/round_button"
        android:text="@string/async_task"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/add_dialog_btnService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/round_button"
        android:text="@string/service"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/add_dialog_btnIntentServ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/round_button"
        android:text="@string/intent_service"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size" />

</LinearLayout>



