<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.StudentActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_add">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_student_details"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:id="@+id/title_screen"
            android:textAlignment="center"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_add_student"
                android:id="@+id/no_added_image"
                android:layout_gravity="center"
                />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/add_name"
                android:inputType="textCapWords|textPersonName"
                android:maxLength="30"
                />

            <EditText
                android:id="@+id/editTextRollNo"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/add_roll_no"
                android:maxLength="6"
                />
            <Button
                android:id="@+id/btnAddStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/round_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_student" />
        </LinearLayout>

    </ScrollView>



</LinearLayout>