<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context=".activity.ShowStudentsActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size"
                android:text="@string/student_details"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_switch"
                android:layout_marginLeft="@dimen/margin_switch"
                android:layout_weight="0.33"
                android:text="@string/layout_switch"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ibDeleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_delete_sweep_black_24dp" />

            <ImageButton
                android:id="@+id/ibSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/menu_button"
                android:src="@drawable/ic_sort_black_24dp" />


        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.design.widget.TabLayout
        android:id="@+id/tlShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>
</LinearLayout>